# P2PLocalChat

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt
src/CommunicationService/include/: CommunicationService.hpp
src/CommunicationService/src/: CMakeLists.txt  CommunicationService.cpp  MessageReceiver.cpp  MessageReceiver.hpp  MessageSender.cpp  MessageSender.hpp
src/CommunicationService/unitTest/: CMakeLists.txt  CommunicationServiceUnitTest.cpp
src/DatabaseService/include/: DatabaseService.hpp
src/DatabaseService/src/: CMakeLists.txt  DatabaseService.cpp
src/DatabaseService/unitTest/: CMakeLists.txt  DatabaseServiceUnitTest.cpp
src/P2PLocalMessageLib/: CMakeLists.txt
src/P2PLocalMessageLib/include/: P2PLocalMessageLib.hpp
src/P2PLocalMessageLib/src/: CMakeLists.txt  P2PLocalMessageLib.cpp
src/P2PLocalMessageLib/unitTest/: CMakeLists.txt  P2PLocalMessageLibUnitTest.cpp
src/P2PLocalMessageUI/: CMakeLists.txt
src/P2PLocalMessageUI/src/: CMakeLists.txt  P2PLocalMessageUI.cpp  P2PLocalMessageUI.hpp  main.cxx
